--- a/gb/19/10/1/n11559519.md
+++ b/gb/19/10/1/n11559519.md
@@ -1,66 +1,65 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/gmcdso3109/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/gmcdso3109/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/gmcdso3109/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/gmcdso3109/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/gmcdso3109/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>找寻清水眷村记忆 编织“起飞降落”主题</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/10/1792595ac5976b2587b0073e0b0fe61a-600x400.jpg" />
 <h6>台中清水眷村在文化节活动中，将展出具眷村特色的“柑仔店”。（邓玫玲／大纪元）
 </h6>
 <hr>
-<p>【大纪元2019年10月01日讯】（大纪元记者邓玫玲台湾台中报导）台中<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E7%9C%B7%E6%9D%91.md#1">眷村</a><ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%8A%82.md#1">文化节</a>将于10月10日至13日在清水眷村文化园区举办，今年以“竹篱笆的故事&#8211;序曲，<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E8%B5%B7%E9%A3%9E.md#1">起飞</a>”为主题，更以清水眷村“空军发动机制造厂及降落伞修制厂员工”的历史背景出发，邀请8个在地社团及中港高中师生，规划各种主题展，带领民众重回眷村的往日时光。</p>
-<figure id="attachment_11559522" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/390e1e749793e0f6580cb1e53c735e31.jpg"><img class="wp-image-11559522 size-large" src="https://i.epochtimes.com/assets/uploads/2019/10/390e1e749793e0f6580cb1e53c735e31-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">第6年举办的台中<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E7%9C%B7%E6%9D%91.md#1">眷村</a><ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%8A%82.md#1">文化节</a>活动，把70年前“竹篱笆”内发生的故事在此重现。（邓玫玲／大纪元）</figcaption></figure>
-<p>文化局副局长曾能汀表示，清水眷村是全台13个保存眷村文化的园区之一，今年第6年举办眷村文化节活动，把70年前“竹篱笆”内发生的故事在此重现。此次活动有三个特色，第一是结合在地8个团体共同展出不同的文物展。第二特色是，国庆连假连续4天的活动，将形成不可或缺的集体记忆。第三个特色则是，清水眷村原是民国38年搬迁来台国军眷属的临时克难房，当时他们以为还要回去大陆，没想到回不去了，只能在此安心立命，准备另一阶段的<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E8%B5%B7%E9%A3%9E.md#1">起飞</a>。</p>
-<figure id="attachment_11559521" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/8e5b47fc31262111702cfd30a1f7e4ef.jpg"><img class="wp-image-11559521 size-large" src="https://i.epochtimes.com/assets/uploads/2019/10/8e5b47fc31262111702cfd30a1f7e4ef-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">台中眷村文化节将于10月10日至13日在清水眷村文化园区举办，10月1日举行宣传记者会，台中飞影舞蹈工作室演出精彩的怀旧舞蹈。（邓玫玲／大纪元）</figcaption></figure>
-<p>活动中，规划“2019<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E7%BC%96%E7%BB%87.md#1">编织</a>共创––起飞的记忆”、“起飞．降落”主题展，除了展现眷村独有文化，期间也将播放记录老兵的台湾首部真实电影《刘必稼》以及导演杨布新主导的<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E3%80%8A%E9%BB%91%E7%8C%AB%E4%B8%AD%E9%98%9F%E3%80%8B.md#1">《黑猫中队》</a>，现场还有市集、染织手作、眷村美食品尝、音乐会等。</p>
-<p>文化局表示，“2019<ahref="https://github.com/gmcdso3109/djy/blob/master/gb/tag/%E7%BC%96%E7%BB%87.md#1">编织</a>共创––起飞的记忆”由织布玩创意工作室的陈如萍、吴品慧及杨雅玲老师共同策展，透过在地眷户近20人，费时两个多月时间，共同编织发想完成，作品包括7条各达12～13公尺的编织共创作品“风的记忆”；16支运用回收雨伞既有伞骨缠绕钩制成的降落伞作品“起飞”；以零码布拼接7个眷村地图地毯，加上屋内上方作品“开枝散叶”组成“眷村聚落”。</p>
-<figure id="attachment_11559525" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2019/10/b35ae36d0f0400b5201645f9b5df5fc4.jpg"><img class="wp-image-11559525 size-large" src="https://i.epochtimes.com/assets/uploads/2019/10/b35ae36d0f0400b5201645f9b5df5fc4-600x400.jpg" alt="" width="600" b="400" /></a><figcaption class="wp-caption-text">“2019编织共创––起飞的记忆”，透过在地眷户近20人，费时两个多月时间，共同编织包括7条各达12～13公尺的编织共创作品“风的记忆”。（邓玫玲／大纪元）</figcaption></figure>
+<p>【大纪元2019年10月01日讯】（大纪元记者邓玫玲台湾台中报导）台中<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%9C%B7%E6%9D%91.md#1">眷村</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%8A%82.md#1">文化节</a>将于10月10日至13日在清水眷村文化园区举办，今年以“竹篱笆的故事&#8211;序曲，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%B7%E9%A3%9E.md#1">起飞</a>”为主题，更以清水眷村“空军发动机制造厂及降落伞修制厂员工”的历史背景出发，邀请8个在地社团及中港高中师生，规划各种主题展，带领民众重回眷村的往日时光。</p>
+<figure id="attachment_11559522" aria-describedby="caption-attachment-11559522" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/390e1e749793e0f6580cb1e53c735e31.jpg"><img class="wp-image-11559522 size-large" src="https://i.epochtimes.com/assets/uploads/2019/10/390e1e749793e0f6580cb1e53c735e31-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11559522" class="wp-caption-text">第6年举办的台中<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%9C%B7%E6%9D%91.md#1">眷村</a><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%96%87%E5%8C%96%E8%8A%82.md#1">文化节</a>活动，把70年前“竹篱笆”内发生的故事在此重现。（邓玫玲／大纪元）</figcaption></figure>
+<p>文化局副局长曾能汀表示，清水眷村是全台13个保存眷村文化的园区之一，今年第6年举办眷村文化节活动，把70年前“竹篱笆”内发生的故事在此重现。此次活动有三个特色，第一是结合在地8个团体共同展出不同的文物展。第二特色是，国庆连假连续4天的活动，将形成不可或缺的集体记忆。第三个特色则是，清水眷村原是民国38年搬迁来台国军眷属的临时克难房，当时他们以为还要回去大陆，没想到回不去了，只能在此安心立命，准备另一阶段的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%B7%E9%A3%9E.md#1">起飞</a>。</p>
+<figure id="attachment_11559521" aria-describedby="caption-attachment-11559521" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/8e5b47fc31262111702cfd30a1f7e4ef.jpg"><img class="wp-image-11559521 size-large" src="https://i.epochtimes.com/assets/uploads/2019/10/8e5b47fc31262111702cfd30a1f7e4ef-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11559521" class="wp-caption-text">台中眷村文化节将于10月10日至13日在清水眷村文化园区举办，10月1日举行宣传记者会，台中飞影舞蹈工作室演出精彩的怀旧舞蹈。（邓玫玲／大纪元）</figcaption></figure>
+<p>活动中，规划“2019<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BC%96%E7%BB%87.md#1">编织</a>共创––起飞的记忆”、“起飞．降落”主题展，除了展现眷村独有文化，期间也将播放记录老兵的台湾首部真实电影《刘必稼》以及导演杨布新主导的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E3%80%8A%E9%BB%91%E7%8C%AB%E4%B8%AD%E9%98%9F%E3%80%8B.md#1">《黑猫中队》</a>，现场还有市集、染织手作、眷村美食品尝、音乐会等。</p>
+<p>文化局表示，“2019<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BC%96%E7%BB%87.md#1">编织</a>共创––起飞的记忆”由织布玩创意工作室的陈如萍、吴品慧及杨雅玲老师共同策展，透过在地眷户近20人，费时两个多月时间，共同编织发想完成，作品包括7条各达12～13公尺的编织共创作品“风的记忆”；16支运用回收雨伞既有伞骨缠绕钩制成的降落伞作品“起飞”；以零码布拼接7个眷村地图地毯，加上屋内上方作品“开枝散叶”组成“眷村聚落”。</p>
+<figure id="attachment_11559525" aria-describedby="caption-attachment-11559525" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2019/10/b35ae36d0f0400b5201645f9b5df5fc4.jpg"><img class="wp-image-11559525 size-large" src="https://i.epochtimes.com/assets/uploads/2019/10/b35ae36d0f0400b5201645f9b5df5fc4-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-11559525" class="wp-caption-text">“2019编织共创––起飞的记忆”，透过在地眷户近20人，费时两个多月时间，共同编织包括7条各达12～13公尺的编织共创作品“风的记忆”。（邓玫玲／大纪元）</figcaption></figure>
 <p>责任编辑：黄善</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/10/17/n10790491.md#1">《黑猫中队》首映 看大时代神秘人物的故事</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/19/7/13/n11381608.md#1">南岛10国24工艺师 台东编织成果展</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/19/7/21/n11398847.md#1">全台11个家扶中心文化之旅 梦想起飞勇敢前进</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/19/7/23/n11403415.md#1">九旬奶奶编织450条毯子 浪犬不再怕寒冬</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/19/8/27/n11481137.md#1">虎尾建国一村再生  打造青创基地、眷村文化的亮点基地</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/19/8/28/n11482493.md#1">“越爱台湾”- 台湾文化节即将盛大登场</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/19/8/28/n11483030.md#1">【记忆中的美食拼图】眷村鲜肉包与老工友手工馒头</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/19/8/30/n11487966.md#1">妈祖文化节 县长鸣枪启动 ‘骑’求活动平安顺利</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/13/n12400316.md#1">扎根儿童科技教育 凯比机器人大赛挤爆</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/13/n12400382.md#1">2020小愿艺树馆秋季联展 鹿峰艺童遇眷猫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/17/n10790491.md#1">《黑猫中队》首映 看大时代神秘人物的故事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/13/n11381608.md#1">南岛10国24工艺师 台东编织成果展</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/21/n11398847.md#1">全台11个家扶中心文化之旅 梦想起飞勇敢前进</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/7/23/n11403415.md#1">九旬奶奶编织450条毯子 浪犬不再怕寒冬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/27/n11481137.md#1">虎尾建国一村再生  打造青创基地、眷村文化的亮点基地</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/28/n11482493.md#1">“越爱台湾”- 台湾文化节即将盛大登场</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/28/n11483030.md#1">【记忆中的美食拼图】眷村鲜肉包与老工友手工馒头</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/8/30/n11487966.md#1">妈祖文化节 县长鸣枪启动 ‘骑’求活动平安顺利</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615830.md#1">中市里长挂看板欢迎蓬佩奥 意外获回文：感谢</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615884.md#1">俄乌战事未明 中市盘点避难室2.4万座</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/3/n11428903.md#1" target="_blank">林辉：周恩来冷酷无情 亲手给荣高棠扣叛徒帽子</a></li><li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank">印度媒体报道东方</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/29/n10435561.md#1" target="_blank">罗思义：一个到死还相信共产党伟大的“学者”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/6/n10834201.md#1" target="_blank">这些原中共基层官员对李洪志大师的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/8/n12388668.md#1">乱世佳人的守护天使</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/3/n12378183.md#1">书生神游天宫 原来世人多从天上来</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/8/23/n12352129.md#1">到手钱财如水流？古今三故事 道出败财因由</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/6/21/n12202372.md#1">龄官画蔷  从此各人得各人的眼泪</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/8/n12389252.md#1">古中医“五藏六府”与现代“五脏六腑”之别处</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/8/23/n12350795.md#1">【思想领袖】汉尼提：对付邪恶 美需强大</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/11/n12397399.md#1">【时事纵横】习老友投书遭拒 台湾朋友圈扩大</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/12/n12398229.md#1">【拍案惊奇】李克强频被党媒灭声 习李同创一词</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/9/n12392244.md#1">不沾锅别用错 厨房6样东西使用不当小心吃毒</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/8/n12389899.md#1">【独家】三星撤重创惠州 中共密令拉住日韩</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/11/n12395667.md#1">任志强案开庭 大量警察戒备 无人能旁听</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/11/n12397754.md#1">男星上节目睡成一片 邓超偷拍晒照引围观</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/10/n12395006.md#1">新疆争议发酵？传中共下令禁报《花木兰》</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/10/n12395386.md#1">黄子韬痛失最强靠山 52岁富豪父亲病逝</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/10/n12395276.md#1">《权力游戏》女星黛安娜·瑞格癌逝 享年82岁</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/10/n12395450.md#1">吐槽伊能静太唠叨 秦昊获赞有幽默感</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/9/n12392244.md#1">不沾锅别用错 厨房6样东西使用不当小心吃毒</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/11/n12397483.md#1">掉发原因有3种！中医4招防掉发 长回浓密黑发</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/12/n12398512.md#1">胡锡进炫耀共军以无人机送餐 印度网民调侃</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/11/n12396262.md#1">NBA收视率跌4成 向中共靠拢是原因之一</a></li>
-<li><a href="https://github.com/gmcdso3109/djy/blob/master/gb/20/9/10/n12394303.md#1">疫情所迫失业该提早退休吗？8个实用的建议</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/gmcdso3109/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/gmcdso3109/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/1/n11559519.htm">找寻清水眷村记忆 编织“起飞降落”主题</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/10/1/n11559519.htm">找寻清水眷村记忆 编织“起飞降落”主题</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/gmcdso3109/djy/blob/master/gb/19/10/1/n11559519.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/gmcdso3109/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/gmcdso3109/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gmcdso3109/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gmcdso3109/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/gmcdso3109/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/19/10/1/n11559519.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
